Updated index.html with full layout

--- a/index.html
+++ b/index.html
@@ -3,11 +3,43 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>QPay Mockup</title>
+  <title>QPay Wallet System</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-  <h1>Hello QPay 👋</h1>
+  <header>
+    <h1>QPay Wallet System</h1>
+    <nav>
+      <ul>
+        <li><a href="#wallet">Wallet</a></li>
+        <li><a href="#coins">Coins</a></li>
+        <li><a href="#paymentlink">PaymentLink</a></li>
+      </ul>
+    </nav>
+  </header>
+
+  <main>
+    <section id="wallet">
+      <h2>Wallet Module</h2>
+      <p>Manage your crypto wallets, balances, and transactions here.</p>
+    </section>
+
+    <section id="coins">
+      <h2>Coins</h2>
+      <p>Swap, track, and configure coin options. Full Cryptomate integration.</p>
+    </section>
+
+    <section id="paymentlink">
+      <h2>PaymentLink</h2>
+      <p>Generate and share QR PaymentLinks easily for all wallet types.</p>
+    </section>
+  </main>
+
+  <footer>
+    <p>&copy; 2025 QPay | Built with BPAL-MAIN</p>
+  </footer>
+
   <script src="script.js"></script>
 </body>
 </html>
+
