--- a/index.html
+++ b/index.html
@@ -3,41 +3,33 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>QPay Wallet System</title>
+  <title>QPay Mockup</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-  <header>
-    <h1>QPay Wallet System</h1>
-    <nav>
-      <ul>
-        <li><a href="#wallet">Wallet</a></li>
-        <li><a href="#coins">Coins</a></li>
-        <li><a href="#paymentlink">PaymentLink</a></li>
-      </ul>
-    </nav>
-  </header>
-
   <main>
-    <section id="wallet">
-      <h2>Wallet Module</h2>
-      <p>Manage your crypto wallets, balances, and transactions here.</p>
-    </section>
+    <section>
+      <h1>Hello QPay 👋</h1>
+      <p>You are now running the QPay template. Choose which features to activate below:</p>
 
-    <section id="coins">
-      <h2>Coins</h2>
-      <p>Swap, track, and configure coin options. Full Cryptomate integration.</p>
-    </section>
+      <ul>
+        <li><strong>Wallet:</strong> View, create, and manage wallets</li>
+        <li><strong>Coins:</strong> View and swap cryptocurrencies</li>
+        <li><strong>QR/PaymentLink:</strong> Generate payment links</li>
+        <li><strong>Admin Panel:</strong> Restricted to authorized users</li>
+      </ul>
 
-    <section id="paymentlink">
-      <h2>PaymentLink</h2>
-      <p>Generate and share QR PaymentLinks easily for all wallet types.</p>
+      <p>📌 This version runs via GitHub Pages – any changes here are instantly reflected online.</p>
     </section>
   </main>
 
   <footer>
     <p>&copy; 2025 QPay | Built with BPAL-MAIN</p>
   </footer>
+
+  <script src="script.js"></script>
+</body>
+</html>
 
   <script src="script.js"></script>
 </body>
