Full English update of index.html

--- a/index.html
+++ b/index.html
@@ -3,35 +3,36 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>QPay Mockup</title>
+  <title>QPay Wallet System</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
   <main>
+    <h1>QPay Wallet System</h1>
+    <ul>
+      <li><a href="#">Wallet</a></li>
+      <li><a href="#">Coins</a></li>
+      <li><a href="#">PaymentLink</a></li>
+    </ul>
+
     <section>
-      <h1>Hello QPay 👋</h1>
-      <p>You are now running the QPay template. Choose which features to activate below:</p>
-
-      <ul>
-        <li><strong>Wallet:</strong> View, create, and manage wallets</li>
-        <li><strong>Coins:</strong> View and swap cryptocurrencies</li>
-        <li><strong>QR/PaymentLink:</strong> Generate payment links</li>
-        <li><strong>Admin Panel:</strong> Restricted to authorized users</li>
-      </ul>
-
-      <p>📌 This version runs via GitHub Pages – any changes here are instantly reflected online.</p>
+      <h2>Wallet Module</h2>
+      <p>Manage your crypto wallets, balances, and transactions here.</p>
+      
+      <h2>Coins</h2>
+      <p>Swap, track, and configure coin options. Full Cryptomate integration.</p>
+      
+      <h2>PaymentLink</h2>
+      <p>Generate and share QR PaymentLinks easily for all wallet types.</p>
     </section>
   </main>
 
   <footer>
-    <p>&copy; 2025 QPay | Built with BPAL-MAIN</p>
+    <p>© 2025 QPay | Built with BPAL-MAIN</p>
   </footer>
 
   <script src="script.js"></script>
 </body>
 </html>
 
-  <script src="script.js"></script>
-</body>
-</html>
 
